spacing issue fixed

--- a/src/component/App.scss
+++ b/src/component/App.scss
@@ -4,7 +4,7 @@ $color:rgb(255, 187, 0);
     padding: 0px;
 }
 .button{
-    margin: 20px;
+    margin: 13px;
 }
 #dir{
     font-size: 30px;
@@ -22,6 +22,7 @@ $color:rgb(255, 187, 0);
     text-align: center;
 }
 .btn-div {
+    margin: 5px;
     border: 8px solid $color;
     text-align: center;
 }
